--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
